--- a/frontendui/package.json
+++ b/frontendui/package.json
@@ -22,5 +22,8 @@
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@ag-ui/client": "0.0.43"
   }
 }
